Github issue#1267, Navigation small updates — Title text is not up to spec - font size should be 20px

--- a/src/components/TopBar/ProjectToolBar.scss
+++ b/src/components/TopBar/ProjectToolBar.scss
@@ -55,8 +55,11 @@
     }
 
     .bar-column.project-name {
+      display: flex;
+      align-items: center;
+      
       span {
-        @include roboto;
+        @include tc-heading;
         color: $tc-gray-10;
         display:block;
         text-overflow: ellipsis;
